javais un erreu jai pas ecrit defer dans le head pour que le js sexecute dans le canvas et jai termine donc linitialisation du food et snake dans le js avec quelques modification css et html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNAKE GAME</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-   <canvas id="game" width="400" height="400"></canvas>
- 
+
+  <header>
+    <nav>
+      <h2 class="logo">Snake Game</h2>
+      <ul class="menu">
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Jeu</a></li>
+        <li><a href="#">Score</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <h1>Snake Game</h1>
+
+  <div class="container">
+    <canvas id="game" width="600" height="600"></canvas>
+  </div>
+
 </body>
+
 </html>
